@@ -746,8 +746,7 @@ window.playfair = (function () {
 						var source=snapobj.text(graphobj.x+graphobj.footer_leftpad,graphobj.y+graphobj.height-logo_coords.height-graphobj.footer_bottompad+i*parseInt(graphobj.sourcesize),lines[i]).attr({ident:'foot','font-family':graphobj.sourceface,'font-size':graphobj.sourcesize,'font-weight':graphobj.sourceweight,'dominant-baseline':'text-before-edge'})
 					}
 					source_coords=source.getBBox().y2
-				}
-				else {source_coords=graphobj.y+graphobj.height-logo_coords.height-graphobj.footer_bottompad}
+				} else {source_coords=graphobj.y+graphobj.height-logo_coords.height-graphobj.footer_bottompad}
 
 				if(graphobj.note.length>0){
 					note='Note: '+graphobj.note
@@ -755,7 +754,8 @@ window.playfair = (function () {
 					for (var i=0;i<lines.length;i++){
 						var note=snapobj.text(graphobj.x+graphobj.footer_leftpad,source_coords+i*parseInt(graphobj.notesize),lines[i]).attr({ident:'foot','font-family':graphobj.noteface,'font-size':graphobj.notesize,'font-weight':graphobj.noteweight,'dominant-baseline':'text-before-edge'})
 					}
-				}
+					note_coords=note.getBBox().y2
+				} else {note_coords=source_coords}
 				
 				var foot_fill=snapobj.rect(0,graphobj.height-logo_coords.height-graphobj.footer_toppad-graphobj.footer_bottompad,graphobj.width,logo_coords.height+graphobj.footer_bottompad+graphobj.footer_toppad).attr({fill:graphobj.footerfill})
 				
@@ -768,6 +768,10 @@ window.playfair = (function () {
 				graphobj.logo_height=logo_coords.height
 				graphobj.logo_width=logo_coords.width
 				graphobj.footer_height=logo_coords.height+graphobj.footer_toppad+graphobj.footer_bottompad
+
+				if(note_coords.y2-graphobj.y+graphobj.height-logo_coords.height-graphobj.footer_bottompad+i*parseInt(graphobj.sourcesize)>graphobj.footer_height){
+					graphobj.footer_height=note_coords.y2-graphobj.y+graphobj.height-logo_coords.height-graphobj.footer_bottompad+i*parseInt(graphobj.sourcesize)>graphobj.footer_height
+				}
 				callback(logo_coords.height)
 			})
 		} else {
